Adjusting main API to the comments
